2021-05-29 Heather Lemon <heather.lemon@canonical.com>

	* libfreeipmi/sensor-read/ipmi-sensor-read.c: (LP#1926299)
	Incorrect sensor reading reported.
	BMC's that use a non-zero 'LUN' number (00b-10b)
	will display an incorrect sensor temperature reading unless
	otherwise specified via the ipmiV2.0 spec and must be accessed via LUN 00b.

2021-03-27 Albert Chu <chu11@llnl.gov>

	* etc: Generate many files via configure to ensure proper paths
	are set.

	* man/bmc-watchdog.8.pre.in: Remove legacy documentation.

2021-02-10 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru: Remove unused function parameter 'standby' in
	ipmi_fru_multirecord_dc_load().

2021-02-10 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru-data.c: Fix invalid parsing of record
	in ipmi_fru_multirecord_dc_load() and
	ipmi_fru_multirecord_extended_dc_load().

2021-02-10 Albert Chu <chu11@llnl.gov>

	* Globally fix minor compiler warnings.  A number are related to
	the removal of legacy support.

2021-02-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/fru/ipmi-fru.c: Do not require ipmi_ctx to be set if
	loading data via buffer in ipmi_fru_open_device_id_with_buffer().

	* ipmi-fru: Do not require opening of an IPMI session if using
	--fru-file option.

2021-02-07 Albert Chu <chu11@llnl.gov>

	* etc/: Update conf file permissions.

	* Globally fix a number of typos.

2021-02-06 Fabio Fantoni <fantonifabio@tiscali.it>

	* etc/: Update systemd service files permissions.

2020-09-30 Albert Chu <chu11@llnl.gov>

	* man/manpage-common-workaround-extra-text.man: Document that
	Supermicro boards don't work with IPMI 1.5.
	
2020-09-21 Albert Chu <chu11@llnl.gov>

	* man/ipmi-sel.8.pre.in: Fix typo

2020-09-03 Christian Ehrhardt <christian.ehrhardt@canonical.com>

	* libfreeipmi/locate/ipmi-locate-acpi-spmi.c
	(_ipmi_acpi_get_table_dev_mem): Fix segfault

2020-07-28 Albert Chu <chu11@llnl.gov>

	* man/freeipmi.conf.5.pre.in: Fix typo

2020-01-31 Albert Chu <chu11@llnl.gov>
