@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 PIDFile=/run/bmc-watchdog.pid
-EnvironmentFile=-@X_SYSCONFDIR@/sysconfig/bmc-watchdog
+EnvironmentFile=-@SYSTEMCONFIGDIR@/bmc-watchdog
 ExecStart=@X_SBINDIR@/bmc-watchdog $OPTIONS
 
 [Install]
