@@ -75,12 +75,17 @@ IPMI SEL syslog logging daemon.
   %define _with_systemdsystemunitdir --with-systemdsystemunitdir=%{_unitdir}
 %endif
 
+%if %{?_systemconfigdir:0}%{!?_systemconfigdir:1}
+  %define _systemconfigdir %{_sysconfdir}/sysconfig
+%endif
+
 %prep
 %setup -q
 
 %build
 %configure --program-prefix=%{?_program_prefix:%{_program_prefix}} \
 	   %{?_with_systemdsystemunitdir} \
+	   --with-systemconfigdir=%{_systemconfigdir} \
            %{?_enable_debug} --disable-static
 CFLAGS="$RPM_OPT_FLAGS" make %{?_smp_mflags}
 
@@ -99,6 +104,7 @@ mv $RPM_BUILD_ROOT/%{_sysconfdir}/init.d/ipmidetectd $RPM_BUILD_ROOT/%{_initrddi
 mv $RPM_BUILD_ROOT/%{_sysconfdir}/init.d/ipmiseld $RPM_BUILD_ROOT/%{_initrddir}/ipmiseld
 fi
 %endif
+mkdir -p $RPM_BUILD_ROOT/%{_systemconfigdir}/
 rm -f %{buildroot}%{_infodir}/dir
 # kludge to get around rpmlint complaining about 0 length semephore file
 echo freeipmi > %{buildroot}%{_localstatedir}/lib/freeipmi/ipckey
@@ -461,7 +467,7 @@ fi
 %else
 %config(noreplace) %{_initrddir}/bmc-watchdog
 %endif
-%config(noreplace) %{_sysconfdir}/sysconfig/bmc-watchdog
+%config(noreplace) %{_systemconfigdir}/bmc-watchdog
 %{_sbindir}/bmc-watchdog
 %{_mandir}/man8/bmc-watchdog.8*
 
@@ -493,6 +499,9 @@ fi
 %dir %{_localstatedir}/cache/ipmiseld
 
 %changelog
+* Wed May 28 2021 Albert Chu <chu11@llnl.gov> 1.7.0
+- Add _systemconfigdir definition
+
 * Wed Mar 27 2021 Albert Chu <chu11@llnl.gov> 1.7.0
 - Add include/spec/oem/intel dir
 
