@@ -1,3 +1,7 @@
+2021-05-28 Albert Chu <chu11@llnl.gov>
+
+	* configure.ac: Support --with-systemconfigdir option.
+
 2021-05-29 Heather Lemon <heather.lemon@canonical.com>
 
 	* libfreeipmi/sensor-read/ipmi-sensor-read.c: (LP#1926299)
